--- a/scss/main.scss
+++ b/scss/main.scss
@@ -21,7 +21,7 @@ $text: #16161d;
  * Fonts
  */
 
-$font: 'Open Sans', Helvetica, Arial, sans-serif;
+$font: 'Lato', 'Open Sans', Helvetica, Arial, sans-serif;
 
 /*
  * Beaking Points
@@ -163,6 +163,7 @@ a {
 
 
 section {
+	position: relative;
 	padding: 0 2rem;
 
 	.section-inner {
@@ -176,7 +177,7 @@ section {
 		font-size: 2.4em;
 		line-height: 1.2;
 		color: $secondary;
-		font-weight: 100;
+		font-weight: 300;
 		text-align: center;
 	}
 
@@ -189,7 +190,7 @@ section {
 		small {
 			display: block;
 			font-size: 0.75em;
-			font-weight: 100;
+			font-weight: 300;
 		}
 	}
 	
@@ -226,6 +227,10 @@ section {
 		h1 {
 			color: white;
 		}
+	}
+	
+	&#how-to-get-here {
+		padding: 0;
 	}
 }
 
@@ -287,11 +292,26 @@ section {
 	h2 {
 		margin: 0 1rem;
 		padding: .5rem 0 0;
+		font-size: 0.5em;
 	}
 	p {
 		margin: 0 1rem;
 		padding: 0 0 1rem 0;
 	}
+}
+
+
+.map-info {
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	padding: 1rem;
+	background-color: transparentize( white, 0.15 );
+}
+.lanta-map {
+	width: 100%;
+	height: 60vh;
+	border: none;
 }
 
 .site-footer {
