Add matchHeight for activity cards
Fix activity card headline font size

Signed-off-by: Florian Ziegler <mail@florianziegler.de>

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -290,9 +290,9 @@ section {
 	}
 
 	h2 {
-		margin: 0 1rem;
+		margin: 0 1rem 0.5rem;
 		padding: .5rem 0 0;
-		font-size: 0.5em;
+		font-size: 1em;
 	}
 	p {
 		margin: 0 1rem;
