--- a/css/style.max.css
+++ b/css/style.max.css
@@ -633,9 +633,9 @@ section#how-to-get-here {
   text-align: bottom;
 }
 .activity h2 {
-  margin: 0 1rem;
+  margin: 0 1rem 0.5rem;
   padding: .5rem 0 0;
-  font-size: 0.5em;
+  font-size: 1em;
 }
 .activity p {
   margin: 0 1rem;
