--- a/css/style.max.css
+++ b/css/style.max.css
@@ -564,7 +564,7 @@ section#activities h1 {
   color: white;
 }
 section#how-to-get-here {
-  padding: 0;
+  padding: 0 2rem;
 }
 
 /*
@@ -589,10 +589,18 @@ section#how-to-get-here {
   clear: both;
   display: block;
 }
-@media only screen and (min-width: 768px) {
+@media only screen and (min-width: 420px) {
   .row .column {
     float: left;
   }
+  .row .column.col-25 {
+    width: 50%;
+  }
+  .row .column.col-50, .row .column.col-70 {
+    width: 100%;
+  }
+}
+@media only screen and (min-width: 768px) {
   .row .column.col-25 {
     width: 25%;
   }
@@ -624,20 +632,72 @@ section#how-to-get-here {
   display: block;
 }
 
+.event:nth-child(2n+1) {
+  clear: both;
+}
+
+.activity-filter {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  margin-bottom: 2.5rem;
+  text-align: center;
+}
+.activity-filter li {
+  display: inline-block;
+  margin: 0 0.25rem 0.5rem;
+  padding: 0.25rem 0.75rem;
+  background-color: #aadae4;
+  color: #1b5279;
+  text-decoration: none;
+  border-radius: 3px;
+}
+
+#activities:after {
+  content: '';
+  clear: both;
+  display: block;
+}
+
+#activities .activity {
+  display: none;
+}
+
 .activity {
+  padding: 0 1.5rem;
+  margin-bottom: 2rem;
+}
+.activity:after {
+  content: '';
+  clear: both;
+  display: block;
+}
+@media only screen and (min-width: 420px) {
+  .activity {
+    float: left;
+    width: 50%;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .activity {
+    width: 25%;
+  }
+}
+
+.activity-inner {
   background-color: white;
   border-radius: 3px;
 }
-.activity img {
+.activity-inner img {
   margin: 0;
   text-align: bottom;
 }
-.activity h2 {
+.activity-inner h2 {
   margin: 0 1rem 0.5rem;
   padding: .5rem 0 0;
   font-size: 1em;
 }
-.activity p {
+.activity-inner p {
   margin: 0 1rem;
   padding: 0 0 1rem 0;
 }
