--- a/css/style.max.css
+++ b/css/style.max.css
@@ -534,8 +534,26 @@ section h2 small {
 }
 section .date {
   display: block;
+  margin-bottom: 0.5rem;
+  padding-left: 25px;
   letter-spacing: 1px;
+  color: #1a98a6;
+  background: url(../images/date-icon.png) no-repeat left center;
+  background-size: 20px 20px;
   font-weight: 700;
+}
+section .location {
+  display: block;
+  padding-left: 25px;
+  letter-spacing: 1px;
+  color: #ee7908;
+  background: url(../images/location-icon.png) no-repeat 3px center;
+  background-size: 15px 20px;
+  font-weight: 700;
+  text-decoration: none;
+}
+section .location:hover {
+  text-decoration: underline;
 }
 section#intro {
   padding: 8rem 1rem;
@@ -654,6 +672,7 @@ section#how-to-get-here {
   color: #1b5279;
   text-decoration: none;
   border-radius: 3px;
+  cursor: pointer;
 }
 
 #activities:after {
