--- a/scss/main.scss
+++ b/scss/main.scss
@@ -346,6 +346,9 @@ section {
 	display: none;
 }
 
+.activity-list {
+	margin: 0 -1.5rem;
+}
 .activity {
     padding: 0 1.5rem;
     margin-bottom: 2rem;
@@ -366,12 +369,13 @@ section {
 	img {
 		margin: 0;
 		text-align: bottom;
+		border-radius: 3px 3px 0 0;
 	}
 
 	h2 {
 		margin: 0 1rem 0.5rem;
 		padding: .5rem 0 0;
-		font-size: 1em;
+		font-size: 1.25em;
 	}
 	p {
 		margin: 0 1rem;
