Headline and intro image update

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -227,7 +227,7 @@ section {
 
 	&#intro {
 		padding: 8rem 1rem;
-		background: url(../images/intro-bg.jpg) no-repeat center bottom;
+		background: url(../images/lanta-beach-bg.jpg) no-repeat center center;
 		background-size: cover;
 		color: white;
 		text-align: center;
