--- a/css/style.max.css
+++ b/css/style.max.css
@@ -561,7 +561,7 @@ section .location:hover {
 }
 section#intro {
   padding: 8rem 1rem;
-  background: url(../images/intro-bg.jpg) no-repeat center bottom;
+  background: url(../images/lanta-beach-bg.jpg) no-repeat center center;
   background-size: cover;
   color: white;
   text-align: center;
