Add callback to update height after filter is triggert
- Doesn't work though. There seems to be a bug: https://github.com/liabru/jquery-match-height/issues/60

Signed-off-by: Florian Ziegler <mail@florianziegler.de>

--- a/css/style.max.css
+++ b/css/style.max.css
@@ -580,6 +580,7 @@ section#events {
   background-color: #f0f5e1;
 }
 section#activities {
+  padding-bottom: 2rem;
   background-color: #1a98a6;
 }
 section#activities h1 {
