--- a/scss/main.scss
+++ b/scss/main.scss
@@ -247,6 +247,7 @@ section {
 		background-color: $alternate;
 	}
 	&#activities {
+		padding-bottom: 2rem;
 		background-color: $secondary;
 
 		h1 {
