--- a/scss/main.scss
+++ b/scss/main.scss
@@ -326,17 +326,24 @@ section {
 .activity-filter {
 	@include list-reset;
 	margin-bottom: 2.5rem;
+	font-size: 0.875em;
+	line-height: 1;
 	text-align: center;
 
 	li {
 		display: inline-block;
 		margin: 0 0.25rem 0.5rem;
-		padding: 0.25rem 0.75rem;
-		background-color: $light;
-		color: $primary;
+		padding: 0.5rem 1rem;
+		background-color: transparentize( white, 0.15 );
+		color: $highlight;
 		text-decoration: none;
 		border-radius: 3px;
 		cursor: pointer;
+		
+		&.active {
+			color: white;
+			background-color: $highlight;
+		}
 	}
 }
 
@@ -404,7 +411,7 @@ section {
 .site-footer-inner {
 	margin: 0 auto;
 	max-width: $maxwidth;
-	color: #ccc;
+	color: #999;
 }
 
 .right {
