--- a/scss/main.scss
+++ b/scss/main.scss
@@ -102,10 +102,10 @@ a {
 //}
 
 .site-header {
-	padding: 2rem 2rem 0.5rem;
+	padding: 1.5rem 2rem 0.5rem;
 	
 	@media only screen and (min-width: $break) {
-		padding: 2rem 2rem;
+		padding: 1.5rem 2rem;
 	}
 	
 	.site-header-inner {
@@ -115,6 +115,8 @@ a {
 	}
 }
 .logo {
+	line-height: 1;
+
     img {
         width: 160px;
 		height: auto;
@@ -125,6 +127,7 @@ a {
     }
 }
 .description {
+	display: none;
 	margin-bottom: 1rem;
 	color: $light;
 
@@ -139,7 +142,7 @@ a {
 		position: absolute;
 		top: 50%;
 		right: 0;
-		margin: -1em;
+		margin: -0.5em;
 	}
     
     ul {
@@ -227,16 +230,21 @@ section {
 
 	&#intro {
 		padding: 8rem 1rem;
-		background: url(../images/lanta-beach-bg.jpg) no-repeat center center;
+		background: url(../images/kolanta-sunset.jpg) no-repeat center bottom;
 		background-size: cover;
 		color: white;
 		text-align: center;
 		
 		h1 {
-			margin: 0 0 0.5rem 0;
+			margin: 0 0 1.5rem 0;
 			font-size: 3em;
 			line-height: 1;
 			color: white;
+		}
+		img {
+			max-width: 100%;
+			width: 800px;
+			height: auto;
 		}
 		p {
 			margin: 0;
